# hyperlight-wasm-calculator-example

./: .gitignore  Justfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
components/adder/: Cargo.toml
components/adder/src/: bindings.rs  lib.rs
components/calculator/: Cargo.toml
components/calculator/src/: bindings.rs  lib.rs
components/subtractor/: package-lock.json  package.json  subtractor.js
example/: Cargo.toml  calculator-composed.wit
example/src/: main.rs
wit/: calculator.wit
