[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperlight-wasm-examples:calculator"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../../wit/calculator.wit"
world = "calculator"

[package.metadata.component.target.dependencies]

